--- a/css/style.css
+++ b/css/style.css
@@ -51,19 +51,75 @@ section {
     
 }
 
+header {
+    padding: 30px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: sienna;
+}
+
 footer {
     height: 350px;
     background-color: honeydew;
+    justify-content: space-between;
+    padding: 30px 60px;
 }
 
+
+header nav a {
+    padding: 10px 30px;
+    text-decoration: none;
+}
+
+/* LINKS */
+a:link, a:visited {
+   color:slategray 
+}
+
+a:hover {
+    background-color: wheat;
+}
+
+a:active {
+    color:slateblue
+}
+
+/* MENU LINKS */
+a.menu:link, a.menu:visited {
+    color: purple;
+}
+
+a.menu:hover {
+    color: sienna;
+}
+
+
+
 /* THIS IS A CLASS */
+a.button-link:link, a.button-link:visited {
+    background-color: orangered;
+    color: whitesmoke;
+    border-radius: 8px;
+    box-shadow: 0px 1px 4px 1px rgb(0 0 0 / 8%);
+}
+
+a.button-link:hover {
+    background-color: purple;
+}
+
+
+
 .home-article {
     /* border: 10px solid whitesmoke; */
     border-radius: 16px;
     background-color: whitesmoke;
     width: 200px;
     padding: 20px;
+    margin: 20px;
 }
+
+
+
 
 .img-article {
     width: 100%;
@@ -72,8 +128,44 @@ footer {
 .icon-feature {
     font-size: 4em;
     color: darkgreen;
+    margin: 10px;
 }
 
+.icon-social {
+    margin: 5px;
+}
+
+.container {
+    display: flex;
+}
+
+.author-image {
+    width: 40px;
+    height: 40px;
+    margin: 10px;
+}
+
+.author-container {
+    align-items: center;
+}
+
+.feature-card {
+    padding: 10px;
+    min-width: 350px;
+    max-width: 400px;
+}
+
+.contact-30 {
+    width: 30%;
+}
+
+.contact-70 {
+    width: 70%;
+}
+
+.fab {
+    margin 20px;
+}
 /* THIS IS AN ID */
 #hero {
     /* background-color: tomato; */
@@ -82,4 +174,53 @@ footer {
     text-align: center;
     /* height: 500px; */
     height: 60vh;
+    /* flex settings */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#articles {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#features {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#contact {
+    padding: 30px;
+
+}
+
+
+/* -------------------------- */
+/* TABLET */
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+    h1 {
+       background-color: blue; 
+       font-size: 4.653rem;
+    }
+    header {
+        background-color: sandybrown;
+    }
+
+}
+
+
+
+/* -------------------------- */
+/* DESKTOP */
+@media only screen and (min-width: 768px) {
+    h1 {
+        background-color: darkmagenta;
+        font-size: 5.653rem;
+    }
+    
+    header {
+        background-color: royalblue;
+    }
+
 }
